--- a/ChangeCounselling.Web/Web.config
+++ b/ChangeCounselling.Web/Web.config
@@ -21,7 +21,7 @@
   <connectionStrings>
     <!-- <add name="CounsellorDbContext"   connectionString="data source=MyServer;initial catalog=DataBase;user id=MyUser;password=MyPassword;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <!-- <add name="CounsellorDbContext" connectionString="Data Source=.;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>-->
-    <add name="CounsellorDbContext" connectionString="data source=DESKTOP-DC;initial catalog=CCounselling;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CounsellorDbContext" connectionString="data source=DESKTOP-DC;initial catalog=ChangeCounselling;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
