--- a/ChangeCounselling.Web/ChangeCounselling.Web.csproj
+++ b/ChangeCounselling.Web/ChangeCounselling.Web.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\CounsellorsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -235,13 +236,14 @@
     <Content Include="Views\Book\Details.cshtml" />
     <Content Include="Views\Bill\Index.cshtml" />
     <Content Include="Views\Book\Index.cshtml" />
-    <Content Include="Views\Book\Create.cshtml" />
     <Content Include="Views\Book\Edit.cshtml" />
     <Content Include="Views\Book\Delete.cshtml" />
     <Content Include="Views\Bill\Details.cshtml" />
     <Content Include="Views\Bill\Create.cshtml" />
     <Content Include="Views\Bill\Edit.cshtml" />
     <Content Include="Views\Bill\Delete.cshtml" />
+    <Content Include="Views\Login\Auth.cshtml" />
+    <Content Include="Views\Book\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
