Datepicker,view,bill

--- a/ChangeCounselling.Data/ChangeCounselling.Data.csproj
+++ b/ChangeCounselling.Data/ChangeCounselling.Data.csproj
@@ -134,6 +134,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomValidation\CustomDateValidation.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Bill.cs" />
     <Compile Include="Models\Book.cs" />
